# nonos

./: .gitignore  .pre-commit-config.yaml  README.md  ato.yaml  build.py  platformio.ini  pyproject.toml
.cursor/: mcp.json
.github/workflows/: ci.yml
elec/footprints/: footprints.kicad_sym
elec/footprints/footprints.3dshapes/: QFN-40_L6.0-W6.0-H0.8-P0.50.step
elec/footprints/footprints.pretty/: BGA-486_L14.0-W14.0-P0.50-TL_MIMX8MM6DVTLZAA.kicad_mod  BGA-486_L14.0-W14.0-P0.50-TL_NXP_MIMX8MMXDVTLZXA.kicad_mod  QFN-40_L6.0-W6.0-P0.50-BL-EP.kicad_mod  VQFN-32_L5.0-W5.0-P0.50-TL-EP.kicad_mod
elec/layout/: capacitive-sensor.kicad_pcb  capacitive-sensor.kicad_pro  hat-board.kicad_pcb  hat-board.kicad_pro  pd-controller.kicad_pcb  pd-controller.kicad_pro
elec/layout/amplifier/: amplifier.kicad_pcb  amplifier.kicad_pro  fp-lib-table
elec/layout/capacitive-sensor/: capacitive-sensor.kicad_pcb  capacitive-sensor.kicad_pro  fp-lib-table
elec/layout/capacitive_sensor/: capacitive_sensor.kicad_pcb  capacitive_sensor.kicad_pro
elec/layout/cm4/: cm4.kicad_pcb  cm4.kicad_pro
elec/layout/default/: default.kicad_pcb  default.kicad_pro  fp-lib-table  nonos.kicad_dru  nonos.kicad_pcb  nonos.kicad_pro
elec/layout/dsp/: dsp.kicad_pcb  dsp.kicad_pro  fp-lib-table
elec/layout/emmc/: emmc.kicad_pcb  emmc.kicad_pro
elec/layout/hat/: fp-lib-table  hat.kicad_pcb  hat.kicad_pro
elec/layout/hat-board/: hat-board.kicad_pro
elec/layout/hat_board/: fp-lib-table  hat-board.kicad_pcb  hat-board.kicad_pro  hat_board.kicad_pcb  hat_board.kicad_pro
elec/layout/imx8/: fp-lib-table  imx8.kicad_pcb  imx8.kicad_pro
elec/layout/nfc/: fp-lib-table  nfc.kicad_pcb  nfc.kicad_pro
elec/layout/pd-controller/: fp-lib-table  pd-controller.kicad_pcb  pd-controller.kicad_pro
elec/layout/pd_controller/: pd_controller.kicad_pcb  pd_controller.kicad_pro
elec/layout/pmic/: fp-lib-table  pmic.kicad_pcb  pmic.kicad_pro
elec/layout/ram/: emmc.kicad_pro  pmic.kicad_pro  ram.kicad_pcb  ram.kicad_pro
elec/layout/regulator/: regulator.kicad_pcb  regulator.kicad_pro
elec/layout/test/: fp-lib-table  imx8.kicad_pcb  imx8.kicad_pro
elec/libs/footprints/lcsc.pretty/: C0201.kicad_mod  CONN-SMD_4P-P1.00_SM04B-SRSS-TB-LF-SN.kicad_mod  CONN-TH_XT30PW-F-1.kicad_mod  DFN1610-2_L1.6-W1.0-P1.05-RD.kicad_mod  LED0603-RD.kicad_mod  QFN-24_L4.0-W4.0-P0.50-BL-EP2.8.kicad_mod  R0201.kicad_mod  R0402.kicad_mod  SOT-323-3_L2.1-W1.3-P1.32-LS2.1-BR.kicad_mod  USB-C-SMD_TYPE-C-6PIN-2MD-073.kicad_mod  hat-button-antenna.kicad_mod
elec/src/: amplifier.ato  can_bridge_by_name.py  hat.ato  nonos.ato  nonos.py  regulator.ato  tps62933.ato
elec/src/USBPD/: PDController.py  TYPE_C_16PIN_2MD073.py  main.py  pd_controller.py
elec/src/USBPD/components/: STUSB4500.py  TYPE_C_16PIN_2MD073.py  XT30.py
elec/src/amplifier/: Texas_Instruments_TAS5825MRHBR.py
elec/src/cm4/: Ethernet.py  HANRUNZhongshan_HanRun_Elec_HR911130A.py  HRSHirose_DF40C_100DS_0_4V51.py  I2S.py  Texas_Instruments_SN74LVC1G07DBVR.py  cm4.py
elec/src/components/: TAS5825MRHBR.ato  hctl_hc_type_c24p_vs935a_f1104.py  js_tsales_america_b02b_xa_sk1al_fsn.py  saleae_header.py
elec/src/dsp/: adau1452.ato  adau145x.ato  dsp.ato
elec/src/hat_board/: Hat_Button_Antenna.py  OPSCO_Optoelectronics_SK6805SIDE_G_001.py  TE_Connectivity_1_2328702_0.py  hat_board.py
elec/src/hat_board/capacitive_sensor/: microchip_tech_cap11881cptr.py
elec/src/hat_board/nfc/: NXP_Semicon_PN5321A3HN_C106_51.py
elec/src/parts/ALLPOWER_AP30P30Q/: ALLPOWER_AP30P30Q.ato  AP30P30Q.kicad_sym  PDFN3333-8_L3.1-W3.2-H0.8-P0.65.step  PDFN3333-8_L3.1-W3.2-P0.65-LS3.4-BL.kicad_mod
elec/src/parts/Analog_Devices_ADAU1452WBCPZ/: ADAU1452WBCPZ.kicad_sym  Analog_Devices_ADAU1452WBCPZ.ato  LFCSP-72_L10.0-W10.0-P0.50-LS10.2-BL-EP5.3.kicad_mod  LFCSP-72_L10.0-W10.0-P0.50-LS10.2-BL-EP5.3.step
elec/src/pd_controller/: pd_controller.py
elec/src/power-supply/: Texas_Instruments_TPS56637RPAR.py  fato.py
elec/src/power_supply/: Texas_Instruments_TPS56637RPAR.py
elec/src/processor/: PCA9450AAHNY.py  RAM.py  eMMC.py  imx8.ato  imx8.py  pmic.py
firmware/nonos_server/: README.md  bt-agent.service  i2c_bridge.service  make_symlinks.sh  nonos.service  pyproject.toml  setup.sh  setup_ap.sh  shairplay.service  spotifyd.service  upload_filter.sh  vncserver.service
firmware/nonos_server/configs/: bluetooth_main.conf  config.txt  packages.txt
firmware/nonos_server/dts/: hat.dts  install.sh
firmware/nonos_server/services/: i2c_bridge.service  nonos.service  shairplay.service  spotifyd.service  vncserver.service
firmware/nonos_server/src/audio_server/: __init__.py  bt-agent.py  main.py  mediactrl.py
firmware/nonos_server/src/audio_server/drivers/: adau1452.py  cap1188.py  common.py  stusb4500.py  tas5825.py
firmware/nonos_server/src/audio_server/processing/: chain.conf  chain.py  check.md  check.sh  model.py  set_default.sh
firmware/nonos_server/src/tcp_i2c_bridge/: README.md  __init__.py  app.py  cli.py  i2c_backend.py  logging_config.py  main.py  protocol.py  protocol_dumper.py  server.py
firmware/nonos_server/tests/tcp_i2c_bridge/: __init__.py  test_i2c_backend.py  test_integration.py  test_protocol.py  test_server.py
firmware/src/: main.cpp
(+210 files in other folders)
