[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nonos"
description = "Open-source smart speaker"
readme = "README.md"
requires-python = ">=3.13,<3.14"
version = "0.0.1"
license = { file = "LICENSE" }
authors = [{ name = "Narayan Powderly", email = "narayan@atopile.io" }]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "atopile @ git+https://github.com/atopile/atopile.git#staging/ato_extensions",
]

[project.urls]
Homepage = "https://github.com/atopile/atopile"
"Bug Tracker" = "https://github.com/atopile/atopile/issues"


[tool.hatch.build]
packages = ["elec/src/"]

[tool.hatch]
metadata.allow-direct-references = true

[dependency-groups]
dev = ["pre-commit>=2.20,<4.0", "pytest>=7.1.3,<9.0.0", "ruff>=0.11.0,<0.12.0"]


[tool.ruff]
line-length = 88         # Same as Black.
target-version = "py313"

exclude = []

[tool.ruff.format]

[tool.ruff.lint]
# Enable recommended set of rules
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # Pyflakes
    "I001", # isort
    #"B",    # flake8-bugbear
    #"C4",   # flake8-comprehensions
    #"PL",   # Pylint
    #"RUF",  # Ruff-specific rules
    #"UP",   # pyupgrade
    #"N",    # pep8-naming
    #"SIM",  # flake8-simplify
    #"TCH",  # flake8-type-checking
    #"ARG",  # flake8-unused-arguments
    #"PTH",  # flake8-use-pathlib
]

# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = [
    "A",   # flake8-builtins
    "B",   # flake8-bugbear
    "C",   # flake8-comprehensions
    "D",   # pydocstyle
    "E",   # pycodestyle errors
    "F",   # Pyflakes
    "G",   # flake8-logging-format
    "I",   # isort
    "N",   # pep8-naming
    "Q",   # flake8-quotes
    "S",   # flake8-bandit
    "T",   # flake8-print
    "W",   # pycodestyle warnings
    "ANN", # flake8-annotations
    "ARG", # flake8-unused-arguments
    "BLE", # flake8-blind-except
    "COM", # flake8-commas
    "DJ",  # flake8-django
    "DTZ", # flake8-datetimez
    "EM",  # flake8-errmsg
    "ERA", # eradicate
    "EXE", # flake8-executable
    "FBT", # flake8-boolean-trap
    "ICN", # flake8-import-conventions
    "INP", # flake8-no-pep420
    "ISC", # flake8-implicit-str-concat
    "NPY", # NumPy-specific rules
    "PD",  # pandas-vet
    "PGH", # pygrep-hooks
    "PIE", # flake8-pie
    "PL",  # Pylint
    "PT",  # flake8-pytest-style
    "PTH", # flake8-use-pathlib
    "PYI", # flake8-pyi
    "RET", # flake8-return
    "RSE", # flake8-raise
    "RUF", # Ruff-specific rules
    "SIM", # flake8-simplify
    "SLF", # flake8-self
    "TCH", # flake8-type-checking
    "TID", # flake8-tidy-imports
    "TRY", # tryceratops
    "UP",  # pyupgrade
    "YTT", # flake8-2020
]
unfixable = []

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]
per-file-ignores = {}

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.black]
line-length = 88
target-version = ['py313']
